# CC

./: .env.example  .gitignore  README.md  docker-bake.hcl  docker-compose.yml  oauth-setup-guide.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  embeddings.py  feedback.py  ollama.py  spam.py
backend/app/core/: config.py  database.py  error_logging.py  logging.py
backend/app/middleware/: logging_middleware.py
backend/app/schemas/: __init__.py  email.py
backend/app/services/: __init__.py  auth_service.py  ml_service.py  oauth_service.py  ollama_service.py  rag_service.py
configs/: wsl.conf.optimized
data/: COMP442 Group Project Assignment 2 Report.txt  COMP442 Group Project Assignment 2 Slides.txt  COMP442 Group Project Assignment 2.txt  COMP442_Assignment_2_Answers.md  CS442 Project Outline Presentation.txt  CS442 Project Outline.txt  Final Report.txt  user_feedback.json
docs/: assistant-rag-setup.md  buildkit-optimizations.md  component-verification.md  dependency-updates-summary.md  development.md  docker-optimization-guide.md  docker-wsl-troubleshooting.md  inflated-metrics-bug-fix.md  ml-backend-fixes-summary.md  ml-backend-integration.md  npm-upgrade-summary.md  oauth-fix-summary.md  oauth-troubleshooting-guide.md  ollama-model-management-implementation.md  ollama-quick-setup.md  ollama-setup-guide.md  pydantic-namespace-fix.md  task-completion-summary.md  task-implementation-summary.md  training-fixes-summary.md  training-results-architecture-fix.md  unified-docker-compose-guide.md  vercel-deployment-guide.md  wsl-docker-optimization-guide.md  (+1 more)
(+83 files in other folders)
